<resources>
    <string name="app_name">EPayLaterAssesment</string>
    <string name="error_title">Error</string>
    <string name="available_balance">Available Balance</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="create_transaction">create transaction</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="currency">Currency</string>
    <string name="empty_error">Value Required!!</string>
</resources>
