<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel"
                  type="com.sumit.learning.epaylaterassesment.activity.transaction.CreateTransactionViewModel"/>
        <variable name="clickHandler"
                  type="com.sumit.learning.epaylaterassesment.activity.transaction.ClickHandler"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.transaction.CreateTransaction">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/amount"
                android:layout_margin="16dp"
                app:errorEnabled="true"
                app:errorText="@{viewModel.errorAmount}"
        >

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:text="@={viewModel.amount}"
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutCurrency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutAmount"
                android:hint="@string/currency"
                android:layout_margin="16dp"
        >

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:text="@={viewModel.currency}"
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutCurrency"
                android:hint="@string/description"
                android:layout_margin="16dp"
                app:errorEnabled="true"
                app:errorText="@{viewModel.errorDescription}"
        >

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:text="@={viewModel.description}"
            />

        </android.support.design.widget.TextInputLayout>

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/layoutAmount"
                app:layout_constraintEnd_toEndOf="@id/layoutAmount"
                app:layout_constraintTop_toBottomOf="@id/layoutDescription"
                android:layout_marginTop="16dp"
                android:text="@string/create_transaction"
                android:onClick="@{() -> clickHandler.createTransaction()}"
        />

    </android.support.constraint.ConstraintLayout>
</layout>
