<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel"
                  type="com.sumit.learning.epaylaterassesment.activity.main.MainViewModel"/>

        <variable name="clickHandler" type="com.sumit.learning.epaylaterassesment.activity.main.ClickHandler"/>
    </data>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            tools:context=".activity.main.MainActivity">

        <android.support.v7.widget.CardView
                android:id="@+id/balance_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        android:elevation="4dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                <TextView
                        android:id="@+id/balance_heading"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:gravity="center"
                        android:text="@string/available_balance"
                        android:textSize="22sp"/>

                <TextView android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintTop_toBottomOf="@id/balance_heading"
                          android:layout_marginTop="8dp"
                          android:textSize="24sp"
                          android:textStyle="bold"
                          android:gravity="center"
                          android:text="@{viewModel.balance}"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <TextView
                android:id="@+id/transaction_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balance_card"
                android:text="@string/recent_transactions"
                android:textSize="22sp"
                android:layout_marginTop="8dp"
        />

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_transaction"
                android:layout_width="0dp"
                android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/balance_card"
        app:layout_constraintEnd_toEndOf="@id/balance_card"
        app:layout_constraintTop_toBottomOf="@id/transaction_heading"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/create_transaction">

        </android.support.v7.widget.RecyclerView>

        <Button
                android:id="@+id/create_transaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/rv_transaction"
                app:layout_constraintEnd_toEndOf="@id/rv_transaction"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/create_transaction"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> clickHandler.createTransactionClicked()}"
        />

    </android.support.constraint.ConstraintLayout>

</layout>
